--- a/index(1).html
+++ b/index(1).html
@@ -125,7 +125,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br>
             <p id="kohahaku">
-                THAN YOU ALL FOR THIS OPPORTUNITY 
+                THANK YOU ALL FOR THIS OPPORTUNITY 
             </p>
         </div>
     </body>
